--- a/styles/_customVar.scss
+++ b/styles/_customVar.scss
@@ -4,10 +4,6 @@
 // // --------------------------------------------------
 
 
-// // Custom
-$main-color:              #16a085;
-$icon-size:                 60px;
-
 // //== Colors
 // //
 // //## Gray and brand colors for use across Bootstrap.
@@ -19,7 +15,7 @@ $icon-size:                 60px;
 // $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 // $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-// $brand-primary:         $main-color !default; // #337ab7
+// $brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
 // $brand-success:         #5cb85c !default;
 // $brand-info:            #5bc0de !default;
 // $brand-warning:         #f0ad4e !default;
@@ -366,22 +362,22 @@ $icon-size:                 60px;
 // //##
 
 // // Basics of a navbar
-// $navbar-height:                    70px !default;
-// $navbar-margin-bottom:             0px !default;
+// $navbar-height:                    50px !default;
+// $navbar-margin-bottom:             $line-height-computed !default;
 // $navbar-border-radius:             $border-radius-base !default;
 // $navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
 // $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2) !default;
 // $navbar-collapse-max-height:       340px !default;
 
 // $navbar-default-color:             #777 !default;
-// $navbar-default-bg:                $main-color !default;
+// $navbar-default-bg:                #f8f8f8 !default;
 // $navbar-default-border:            darken($navbar-default-bg, 6.5%) !default;
 
 // // Navbar links
-// $navbar-default-link-color:                #fff !default;
-// $navbar-default-link-hover-color:          #fff !default;
-// $navbar-default-link-hover-bg:             darken($navbar-default-bg, 6.5%) !default;
-// $navbar-default-link-active-color:         #fff !default;
+// $navbar-default-link-color:                #777 !default;
+// $navbar-default-link-hover-color:          #333 !default;
+// $navbar-default-link-hover-bg:             transparent !default;
+// $navbar-default-link-active-color:         #555 !default;
 // $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%) !default;
 // $navbar-default-link-disabled-color:       #ccc !default;
 // $navbar-default-link-disabled-bg:          transparent !default;
