--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,5 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-compass";
+@import "base";
 @import "customVar";
-@import "functions";
 @import "custom";
