--- a/styles/_customVar.scss
+++ b/styles/_customVar.scss
@@ -4,10 +4,15 @@
 // // --------------------------------------------------
 
 
-// //== Colors
+// //== Base Colors
+$main-color:                #333;
+$section-color:             #454545;   
+
+
+$light-base:              rgb(255, 255, 255) !default;
+$light-line:                lighten($light-base, 50%);
 // //
 // //## Gray and brand colors for use across Bootstrap.
-
 // $gray-base:              #000 !default;
 // $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 // $gray-dark:              lighten($gray-base, 20%) !default;   // #333
