--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,5 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
-@import "../../node_modules/bootstrap/scss/bootstrap-compass";
-@import "base";
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "customVar";
+@import "sections";
+@import "base";
 @import "custom";
