Class names changed

--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -5,16 +5,14 @@
 	background-position: center; 
 }
 
-.section-h3{
-	font-size: 40px;
-	text-align: left;
+.section-h{
+	font-size: 50px;
 	margin: 10px 0px;
 	font-weight: 100;
 }
 
-.section-p{
+.tag{
 	font-size: 16px;
-	text-align: left;
 	margin:30px 0px; 
 }
 
