--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -6754,15 +6754,13 @@ a.text-dark:hover, a.text-dark:focus {
   background-size: cover;
   background-position: center; }
 
-.section-h3 {
-  font-size: 40px;
-  text-align: left;
+.section-h {
+  font-size: 50px;
   margin: 10px 0px;
   font-weight: 100; }
 
-.section-p {
+.tag {
   font-size: 16px;
-  text-align: left;
   margin: 30px 0px; }
 
 .base-section {
