--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,15 @@
-@import "../node_modules/bootstrap/scss/bootstrap";
-@import "customVar";
-@import "sections";
-@import "custom";
-@import "base";
+@import"../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import"../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-compass";
+@import"customVariables";
+@import"navbar";
+@import"custom";
+@import"header";
+@import"showcase";
+@import"sections";
+@import"iphone";
+@import"web-section";
+@import"laptop-section";
+@import"final-section";
+@import"footer";
+@import"animations";
+@import"base"
