Base files uploaded

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -13,6 +13,11 @@ body{
 	background-color:red;
 	border:1px solid $main-color;
 }
+
+.base-line{
+	border: 1px solid $main-color;
+}
+
 .container-flex{
 	width:80%;
 	display:flex;
