--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -1,22 +1,5 @@
-.fill{
-    fill:rgb(255, 255, 255);
+.showcase .base-section{
+	background:url("../../img/pier.jpeg");
+	background-size:cover;
+	background-position: center;
 }
-
-.icon {
-    float: left;
-    height:50px;
-    widows: 50px;
-}
-
-.icon svg{
-    height:40px;
-    widows: 40px;
-    margin-top:5px;
-}
-
-
-.image-re{
-    margin: auto;
-    overflow: hidden;
-}
-
