--- a/assets/styles/css/app.css
+++ b/assets/styles/css/app.css
@@ -6752,13 +6752,6 @@ a.text-dark:hover, a.text-dark:focus {
 nav {
   font-family: 'Nunito', sans-serif; }
 
-.nav-box {
-  position: relative;
-  top: -40px; }
-
-.navbar-nav {
-  float: right; }
-
 .navbar-default {
   background: rgba(255, 255, 255, 0);
   border: none; }
@@ -6818,22 +6811,10 @@ nav {
   .nav-box {
     position: relative;
     top: -200px; } }
-.fill {
-  fill: white; }
-
-.icon {
-  float: left;
-  height: 50px;
-  widows: 50px; }
-
-.icon svg {
-  height: 40px;
-  widows: 40px;
-  margin-top: 5px; }
-
-.image-re {
-  margin: auto;
-  overflow: hidden; }
+.showcase .base-section {
+  background: url("../../img/pier.jpeg");
+  background-size: cover;
+  background-position: center; }
 
 header.section-bg {
   background: url("../../Img/iphone2.jpg");
@@ -6909,12 +6890,6 @@ header.section-bg {
   background-size: cover;
   background-position: center; }
 
-.section-h3 {
-  font-size: 40px;
-  text-align: left;
-  margin: 10px 0px;
-  font-weight: 100; }
-
 .tag {
   font-size: 16px;
   margin: 30px 0px; }
@@ -6926,10 +6901,8 @@ header.section-bg {
 .base-header {
   text-align: center;
   font-size: 70px;
-  margin-bottom: 70px; }
-
-.base-line {
-  border: 1px solid #333; }
+  margin-bottom: 70px;
+  font-weight: 100; }
 
 .image .section-img {
   max-width: 100%;
@@ -7072,6 +7045,23 @@ footer {
     opacity: 0.9; }
   100% {
     opacity: 1; } }
+.fill {
+  fill: white; }
+
+.icon {
+  float: left;
+  height: 50px;
+  widows: 50px; }
+
+.icon svg {
+  height: 40px;
+  widows: 40px;
+  margin-top: 5px; }
+
+.image-re {
+  margin: auto;
+  overflow: hidden; }
+
 body {
   font-family: 'Open Sans', sans-serif; }
 
@@ -7083,6 +7073,9 @@ body {
 .line {
   width: 80%;
   background-color: red;
+  border: 1px solid #333; }
+
+.base-line {
   border: 1px solid #333; }
 
 .container-flex {
