--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -1,5 +1,34 @@
-.showcase .base-section{
+.showcase{
 	background:url("../../img/pier.jpeg");
 	background-size:cover;
 	background-position: center;
+	h1{
+		font-size: 90px;
+		margin: 0px;
+	}
+	p{
+		font-size: 18px;
+		font-weight: 700;
+	}
+	.base-section.overlay {
+		padding: 40px 0px;
+	}
+}
+
+
+
+
+.nav-li a {
+	border-bottom: 3px solid #333;
+	padding-bottom: 4px;
+	font-weight: 700;
+	color:#333;
+	&:hover{
+		color:#1e0fbe;
+		border-bottom: 3px solid #1e0fbe;
+		text-decoration: none;
+	}
+	p{
+		font-size:12px;
+	}
 }
