--- a/assets/styles/_sections.scss
+++ b/assets/styles/_sections.scss
@@ -5,15 +5,21 @@
 	background-position: center; 
 }
 
+.leading{
+	font-size: 50px;
+	margin:30px 0px; 
+}
+
 .tag{
 	font-size: 16px;
-	margin:30px 0px; 
+	margin:10px 0px; 
 }
 
 
 .base-section{
 	color: $section-color;
 	padding: 80px 0px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .base-header{
