--- a/webPage/assets/styles/css/app.css
+++ b/webPage/assets/styles/css/app.css
@@ -7023,34 +7023,28 @@ body {
   margin: auto;
   overflow: hidden; }
 
-.showcase {
-  background: url("../../img/red.jpeg");
-  background-size: cover;
-  background-position: center; }
-  .showcase h1 {
-    font-size: 90px;
-    margin: 0px; }
-  .showcase p {
-    font-size: 18px;
-    font-weight: 700; }
-  .showcase .overlay {
-    background: #020202a1; }
-
 nav.b-nav {
-  margin: 15px 0px; }
+  margin: 0px !important;
+  margin: 18px 0px; }
+  nav.b-nav .container-flex {
+    width: 100%;
+    width: 82%; }
   nav.b-nav .box-1 {
-    text-align: center; }
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   nav.b-nav .box-2 {
     flex: 3; }
   nav.b-nav .navbar-brand {
     width: 100%;
     margin: 0px 11px; }
   nav.b-nav .navbar-brand img {
-    width: 150px;
+    width: 115px;
     margin-bottom: 10px; }
   nav.b-nav p {
-    font-size: 11px;
-    font-weight: 700; }
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0; }
 
 .nav-li a {
   border-bottom: 3px solid #333;
@@ -7063,5 +7057,83 @@ nav.b-nav {
     text-decoration: none; }
   .nav-li a p {
     font-size: 12px; }
+
+.showcase {
+  background: url("../../img/background.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  height: 500px; }
+  .showcase .container-fluid {
+    height: 100%; }
+  .showcase .base-section {
+    padding: 70px 0px; }
+  .showcase h1.tag {
+    font-size: 40px;
+    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 3px;
+    color: #333; }
+  .showcase p.tag {
+    font-size: 30px;
+    margin: 0px 0px 20px 0px; }
+  .showcase a {
+    color: #050505;
+    font-size: 25px;
+    text-decoration: underline; }
+    .showcase a:hover {
+      color: #1e0fbe; }
+  .showcase .overlay {
+    background: #ffffff00;
+    height: inherit; }
+  .showcase .box-2 {
+    text-align: right;
+    font-family: 30px; }
+  .showcase .flex-box {
+    height: 50%;
+    align-items: flex-end;
+    margin-bottom: -10px; }
+    .showcase .flex-box .tag {
+      color: black;
+      font-family: 30px; }
+
+.block {
+  position: relative;
+  top: -40px; }
+  .block .container-flex {
+    justify-content: center; }
+  .block .box-1 {
+    flex: 0; }
+  .block img#arrow {
+    height: 100px; }
+
+.first-section h3 {
+  color: #000;
+  font-family: 'Karla', sans-serif;
+  text-align: center;
+  font-weight: 700;
+  word-spacing: 4px;
+  font-size: 26px;
+  word-spacing: -1px;
+  line-height: 40px; }
+.first-section .base-section {
+  padding: 10px 0px; }
+
+@media (max-width: 1250px) {
+  .first-section .base-section .container {
+    width: 100%; }
+
+  .first-section .base-section .container h3 {
+    font-size: 23px; } }
+@media (max-width: 1010px) {
+  nav.b-nav .container-flex {
+    width: 100%; }
+
+  .first-section .base-section .container {
+    width: 100%; }
+
+  .first-section .base-section .container h3 {
+    font-size: 20px; } }
 
 /*# sourceMappingURL=app.css.map */
