--- a/webPage/assets/styles/_custom.scss
+++ b/webPage/assets/styles/_custom.scss
@@ -58,7 +58,7 @@ p{
 		padding: 70px 0px;
 	}
 	h1.tag {
-		font-size: 40px;
+		font-size: 45px;
 		font-weight: 900;
 		font-family: 'Roboto', sans-serif;
 		letter-spacing: 3px;
@@ -97,8 +97,7 @@ p{
 }
 
 .block{
-	position: relative;
-	top: -40px;
+	margin-top: -50px;
 	.container-flex{
 		justify-content: center;
 	}
@@ -115,7 +114,7 @@ p{
 .first-section{
 	h3{
 		color: #000;
-		font-family: 'Karla', sans-serif;
+		font-family: 'Roboto Condensed', sans-serif;
 		text-align: center;
 		font-weight: 700;
 		word-spacing: 4px;
@@ -127,14 +126,50 @@ p{
 		padding: 10px 0px;
 	}
 }
-@media(max-width:1250px){
-	.first-section .base-section .container{
-		width: 100%;
-	}
-	.first-section .base-section .container h3{
-		font-size: 23px;
-	}
 
+.main-header {
+	text-align: center;
+	.base-section{
+		padding: 40px 0px;
+		h1 {
+			font-size: 25px;
+			font-weight: 900;
+			font-family: 'Roboto Condensed', sans-serif;
+		}
+	}
+}
+
+
+@media(max-width:1250px){
+	// .first-section .base-section .container{
+	// 	width: 100%;
+	// }
+	// .first-section .base-section .container h3{
+	// 	font-size: 23px;
+	// }
+
+}
+
+
+.project-section{
+	height: 700px;
+	.boxes{
+		display: flex;
+		align-items: center;
+		/* flex: 1; */
+		background: rgba(255, 254, 254, 0);
+		width: 100%;
+		/* margin: 30px; */
+		height: 400px;
+		justify-content: center;
+		&:hover{background: red;}
+	}
+	.box {
+    height: 80%;
+    width: 80%;
+    background: blue;
+    z-index: -1;
+}
 }
 
 @media(max-width:1010px){
@@ -142,9 +177,15 @@ p{
 		width: 100%;
 	}
 	.first-section .base-section .container{
-		width: 100%;
+		width: 99%;
 	}
-	.first-section .base-section .container h3{
-		font-size: 20px;
+	// .first-section .base-section .container h3{
+	// 	font-size: 20px;
+	// }
+}
+
+@media(max-width:792px){
+	.showcase , .block{
+		display:none;
 	}
 }
