--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -58,3 +58,26 @@ body{
 	margin: auto;
 	overflow: hidden;
 }
+
+.box-border{
+  display: flex;
+  flex-wrap: wrap;
+	background-color: DodgerBlue;
+	justify-content: center;
+}
+
+.box-default{
+  background-color: #f1f1f1;
+  width: 400px;
+  height:400px;
+	margin: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.in-box-default{
+	background: red;
+	height: 70%;
+	width: 70%;
+}
