--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -7024,23 +7024,13 @@ body {
   overflow: hidden; }
 
 .box-border {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: DodgerBlue;
-  justify-content: center; }
-
-.box-default {
-  background-color: #f1f1f1;
-  width: 400px;
-  height: 400px;
-  margin: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.in-box-default {
-  background: red;
-  height: 70%;
-  width: 70%; }
+  display: flex; }
+  .box-border .box-default {
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .box-border .box-default .in-box-default {
+      background: black; }
 
 /*# sourceMappingURL=app.css.map */
