--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -7023,14 +7023,20 @@ body {
   margin: auto;
   overflow: hidden; }
 
-.box-border {
-  display: flex; }
-  .box-border .box-default {
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .box-border .box-default .in-box-default {
-      background: black; }
+.inner-box {
+  box-sizing: content-box;
+  background: #363836;
+  margin: 10px;
+  height: 300px;
+  width: 100%; }
+
+.outer-box {
+  display: flex;
+  align-items: center;
+  /* height: 400px; */
+  width: 400px;
+  background: #ff00003d;
+  padding: 0px;
+  justify-content: center; }
 
 /*# sourceMappingURL=app.css.map */
