--- a/webPage/assets/styles/css/app.css
+++ b/webPage/assets/styles/css/app.css
@@ -7023,15 +7023,21 @@ body {
   margin: auto;
   overflow: hidden; }
 
-.box-border {
-  display: flex; }
-  .box-border .box-default {
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .box-border .box-default .in-box-default {
-      background: black; }
+.inner-box {
+  box-sizing: content-box;
+  background: #363836;
+  margin: 10px;
+  height: 300px;
+  width: 100%; }
+
+.outer-box {
+  display: flex;
+  align-items: center;
+  /* height: 400px; */
+  width: 400px;
+  background: #ff00003d;
+  padding: 0px;
+  justify-content: center; }
 
 nav.b-nav {
   margin: 0px !important;
@@ -7167,19 +7173,17 @@ nav.b-nav {
 
   .project-section {
     display: none; } }
-.box-border {
-  background: #1e0fbe; }
+.inner-box {
+  background: #363836;
+  margin: 20px;
+  height: 300px;
+  width: 100%; }
 
-.box-default {
-  background-color: #02f5a4;
-  width: 200px;
-  height: 200px;
+.outer-box {
   display: flex;
   align-items: center;
+  background: #ff000000;
+  padding: 0px;
   justify-content: center; }
-  .box-default .in-box-default {
-    background: red;
-    height: 70%;
-    width: 70%; }
 
 /*# sourceMappingURL=app.css.map */
