--- a/webPage/assets/styles/_custom.scss
+++ b/webPage/assets/styles/_custom.scss
@@ -125,6 +125,9 @@ p{
 	.base-section{
 		padding: 10px 0px;
 	}
+	.container-flex-fluid{
+		width: 50%;
+	}
 }
 
 .main-header {
@@ -140,69 +143,53 @@ p{
 }
 
 
-@media(max-width:1250px){
-	// .first-section .base-section .container{
-	// 	width: 100%;
-	// }
-	// .first-section .base-section .container h3{
-	// 	font-size: 23px;
-	// }
-
-}
-
-
 .project-section{
 	height: 700px;
-	.boxes{
-		display: flex;
-		align-items: center;
-		background: rgba(255, 254, 254, 0);
-		width: 100%;
-		height: 400px;
-		justify-content: center;
-		&:hover{background: red;}
+	.base-section{
+		padding: 0px;
+		.boxes{
+			display: flex;
+			align-items: center;
+			background: rgba(255, 254, 254, 0);
+			width: 100%;
+			height: 400px;
+			justify-content: center;
+			&:hover{background: red;}
+		}
+		.box {
+			height: 80%;
+			width: 80%;
+			background: blue;
+			z-index: -1;
+		}
 	}
-	.box {
-    height: 80%;
-    width: 80%;
-    background: blue;
-    z-index: -1;
-}
 }
 
-@media(max-width:1010px){
+
+@media(max-width:1200px){
+	.project-section .base-section .container-fluid{
+		width: 100%;
+	}
+
+	.first-section .container-flex-fluid{
+		width: 60%;
+	}
 	nav.b-nav .container-flex {
 		width: 100%;
 	}
-	.first-section .base-section .container{
-		width: 99%;
-	}
-	// .first-section .base-section .container h3{
-	// 	font-size: 20px;
-	// }
 }
-
-@media(max-width:765px){
-	.showcase , .block{
-		display:none;
-	}
-	.project-section{
-		display: none;
-	}
-}
-
 .project-section{
 	.container-fluid{
 		width: 84%;
 	}
 	.blockOverlay{
-		width: 700px;
-		height: 90%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: 10px;
-		flex-direction: column;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    flex-direction: column;
+    width: 100%;
 		h1{
 			color: #fff;
 			font-weight: 700;
@@ -218,14 +205,101 @@ p{
 		padding: 3px;
 
 	}
-	
 	.icons{
 		max-width: 85%;
 		z-index: -1;
 		margin: 20px;
 	}
-
+	.icon-con{
+		width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px;
+		.box-1{
+			display: flex;
+			align-items: center;
+			width: 90%;
+			justify-content: center;
+			height: 100%;
+			position: absolute;
+		.icon-h1{
+			height: 100%;
+			text-transform: capitalize;
+			text-align: left;
+			font-family: 'Poppins', sans-serif;
+			line-height: 100px;
+			h1{
+				margin: 20px 0px 0px 10px;
+			}
+		}
+		}
+		.box-2 {
+			display: flex;
+			flex: 1;
+			align-items: center;
+			justify-content: center;
+			padding: 0px;	// Space between boxes
+			.icons{
+				max-width: 90%;
+				z-index: -1;
+				/* margin: 20px; */
+			}
+		}
+	}
 }
+@media (max-width:1777px){
+	.project-section .icon-con .box-1 .icon-h1{
+		padding-bottom: 50%;
+	}
+}
+@media (max-width:1200px){
+	.project-section .container-fluid{
+		width:95%;
+	}
+	.project-section .icon-con .box-1 .icon-h1{
+		padding-bottom:40%;
+	}
+}
+
+@media(max-width:1010px){
+	.first-section .base-section .container{
+		width: 99%;
+	}
+}
+@media (max-width:990px){
+	.project-section .icon-con .box-1 .icon-h1{
+		padding-bottom: 80%;
+	}
+}
+
+@media (max-width:950px){
+	.first-section .base-section .container-flex-fluid{
+		width: 90%;
+	}
+}
+@media (max-width:991px){
+	.col-lg-3.col-sm-4.post:nth-child(7), .col-lg-3.col-sm-4.post:nth-child(8){
+		display: none;
+	}
+	.first-section .container-flex-fluid{
+		width: 95%;
+	}
+}
+@media(max-width:765px){
+	.showcase , .block{
+		display:none;
+	}
+	.project-section{
+		display: none;
+	}
+}
+
+
+
+
+
 
 
 
