--- a/webPage/assets/styles/css/app.css
+++ b/webPage/assets/styles/css/app.css
@@ -7118,6 +7118,8 @@ nav.b-nav {
   line-height: 40px; }
 .first-section .base-section {
   padding: 10px 0px; }
+.first-section .container-flex-fluid {
+  width: 50%; }
 
 .main-header {
   text-align: center; }
@@ -7130,43 +7132,42 @@ nav.b-nav {
 
 .project-section {
   height: 700px; }
-  .project-section .boxes {
-    display: flex;
-    align-items: center;
-    background: rgba(255, 254, 254, 0);
-    width: 100%;
-    height: 400px;
-    justify-content: center; }
-    .project-section .boxes:hover {
-      background: red; }
-  .project-section .box {
-    height: 80%;
-    width: 80%;
-    background: blue;
-    z-index: -1; }
+  .project-section .base-section {
+    padding: 0px; }
+    .project-section .base-section .boxes {
+      display: flex;
+      align-items: center;
+      background: rgba(255, 254, 254, 0);
+      width: 100%;
+      height: 400px;
+      justify-content: center; }
+      .project-section .base-section .boxes:hover {
+        background: red; }
+    .project-section .base-section .box {
+      height: 80%;
+      width: 80%;
+      background: blue;
+      z-index: -1; }
 
-@media (max-width: 1010px) {
-  nav.b-nav .container-flex {
+@media (max-width: 1200px) {
+  .project-section .base-section .container-fluid {
     width: 100%; }
 
-  .first-section .base-section .container {
-    width: 99%; } }
-@media (max-width: 765px) {
-  .showcase, .block {
-    display: none; }
+  .first-section .container-flex-fluid {
+    width: 60%; }
 
-  .project-section {
-    display: none; } }
+  nav.b-nav .container-flex {
+    width: 100%; } }
 .project-section .container-fluid {
   width: 84%; }
 .project-section .blockOverlay {
-  width: 700px;
   height: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  flex-direction: column; }
+  flex-direction: column;
+  width: 100%; }
   .project-section .blockOverlay h1 {
     color: #fff;
     font-weight: 700; }
@@ -7182,5 +7183,68 @@ nav.b-nav {
   max-width: 85%;
   z-index: -1;
   margin: 20px; }
+.project-section .icon-con {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px; }
+  .project-section .icon-con .box-1 {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    justify-content: center;
+    height: 100%;
+    position: absolute; }
+    .project-section .icon-con .box-1 .icon-h1 {
+      height: 100%;
+      text-transform: capitalize;
+      text-align: left;
+      font-family: 'Poppins', sans-serif;
+      line-height: 100px; }
+      .project-section .icon-con .box-1 .icon-h1 h1 {
+        margin: 20px 0px 0px 10px; }
+  .project-section .icon-con .box-2 {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    padding: 0px; }
+    .project-section .icon-con .box-2 .icons {
+      max-width: 90%;
+      z-index: -1;
+      /* margin: 20px; */ }
+
+@media (max-width: 1777px) {
+  .project-section .icon-con .box-1 .icon-h1 {
+    padding-bottom: 50%; } }
+@media (max-width: 1200px) {
+  .project-section .container-fluid {
+    width: 95%; }
+
+  .project-section .icon-con .box-1 .icon-h1 {
+    padding-bottom: 40%; } }
+@media (max-width: 1010px) {
+  .first-section .base-section .container {
+    width: 99%; } }
+@media (max-width: 990px) {
+  .project-section .icon-con .box-1 .icon-h1 {
+    padding-bottom: 80%; } }
+@media (max-width: 950px) {
+  .first-section .base-section .container-flex-fluid {
+    width: 90%; } }
+@media (max-width: 991px) {
+  .col-lg-3.col-sm-4.post:nth-child(7), .col-lg-3.col-sm-4.post:nth-child(8) {
+    display: none; }
+
+  .first-section .container-flex-fluid {
+    width: 95%; } }
+@media (max-width: 765px) {
+  .showcase, .block {
+    display: none; }
+
+  .project-section {
+    display: none; } }
 
 /*# sourceMappingURL=app.css.map */
