--- a/webPage/assets/styles/_custom.scss
+++ b/webPage/assets/styles/_custom.scss
@@ -1,32 +1,39 @@
 
 nav.b-nav{
-	margin: 0px !important;
+	margin: 0px 0px 20px 0px;;
 	.container-flex{
 		width: 100%;
 		width: 82%;
 	}
-	margin: 18px 0px;
 	.box-1 {
 		display: flex;
     justify-content: center;
     align-items: center;
 }
-.box-2 {
+	.box-2 {
 	flex: 3;
-}
+		ul.navbar-links{
+			margin: 0px;
+			margin-right: 10px;
+			font-size: 15.5px;
+			.nav-li{
+				padding:0px 1px;
+			}
+		}
+	}
 	.navbar-brand {
 		width: 100%;
-		margin: 0px 11px;
-}
+		margin: 0px 20px 5px 15px;
+	}
 	.navbar-brand img {
 		width: 115px;
 		margin-bottom: 10px;
-}
-p{
-	font-size: 14px;
-	font-weight:700;
-	margin: 0;
-}
+	}
+	p{
+		font-size: 14px;
+		font-weight:700;
+		margin: 0;
+	}
 }
 
 .nav-li a {
@@ -50,7 +57,7 @@ p{
 	background-position: center;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 900;
-	height: 500px;
+	height: 400px;
 	.container-fluid{
 		height: 100%;
 	}
@@ -113,13 +120,13 @@ p{
 
 .first-section{
 	h3{
-		color: #000;
-		font-family: 'Roboto Condensed', sans-serif;
-		text-align: center;
-		font-weight: 700;
-		word-spacing: 4px;
-		font-size: 26px;
-		word-spacing: -1px;
+    color: #000;
+    text-align: center;
+    font-weight: 700;
+    word-spacing: 4px;
+    font-size: 24px;
+    word-spacing: -1px;
+    font-family: 'Roboto', sans-serif;
     line-height: 40px;
 	}
 	.base-section{
@@ -127,6 +134,10 @@ p{
 	}
 	.container-flex-fluid{
 		width: 50%;
+		a{
+			color: #000;
+			&:hover{color:#1e0fbe;}
+		}
 	}
 }
 
@@ -163,19 +174,14 @@ p{
 			z-index: -1;
 		}
 	}
-}
-
-
-@media(max-width:1200px){
-	.project-section .base-section .container-fluid{
-		width: 100%;
-	}
-
-	.first-section .container-flex-fluid{
-		width: 60%;
-	}
-	nav.b-nav .container-flex {
-		width: 100%;
+	.main-header{
+		a{
+			color: #000;
+			letter-spacing: 0.4px;
+			font-size: 20px;
+			word-spacing: 2px;
+			border-bottom: 3px solid black;
+			 &:hover{color:#1e0fbe;text-decoration: none;border-bottom: 3px solid #1e0fbe;}}
 	}
 }
 .project-section{
@@ -249,58 +255,13 @@ p{
 		}
 	}
 }
-@media (max-width:1777px){
-	.project-section .icon-con .box-1 .icon-h1{
-		padding-bottom: 50%;
+
+footer{
+	color: #777;
+	p.social-icons {
+		font-size: 40px;
+		float: right;
+		margin: 0px 10px;
 	}
 }
-@media (max-width:1200px){
-	.project-section .container-fluid{
-		width:95%;
-	}
-	.project-section .icon-con .box-1 .icon-h1{
-		padding-bottom:40%;
-	}
-}
-
-@media(max-width:1010px){
-	.first-section .base-section .container{
-		width: 99%;
-	}
-}
-@media (max-width:990px){
-	.project-section .icon-con .box-1 .icon-h1{
-		padding-bottom: 80%;
-	}
-}
-
-@media (max-width:950px){
-	.first-section .base-section .container-flex-fluid{
-		width: 90%;
-	}
-}
-@media (max-width:991px){
-	.col-lg-3.col-sm-4.post:nth-child(7), .col-lg-3.col-sm-4.post:nth-child(8){
-		display: none;
-	}
-	.first-section .container-flex-fluid{
-		width: 95%;
-	}
-}
-@media(max-width:765px){
-	.showcase , .block{
-		display:none;
-	}
-	.project-section{
-		display: none;
-	}
-}
-
-
-
-
-
-
-
-
 
