--- a/webPage/assets/styles/_custom.scss
+++ b/webPage/assets/styles/_custom.scss
@@ -258,10 +258,19 @@ nav.b-nav{
 
 footer{
 	color: #777;
-	p.social-icons {
-		font-size: 40px;
-		float: right;
-		margin: 0px 10px;
+	.row{
+		width: 100%;
+		.flex-box{
+			flex-direction: column;
+			p.social-icons {
+				font-size: 15px;
+				float: right;
+				margin: 0px 6px;
+				color: #777;
+				cursor: pointer;
+				&:hover{color:#1e0fbe;}
+			}
+		}
 	}
 }
 
