grid scss added

--- a/webPage/assets/styles/_grid.scss
+++ b/webPage/assets/styles/_grid.scss
@@ -4,12 +4,10 @@
 	}
 }
 @media (max-width:1200px){
-	.project-section .container-fluid{
-		width:95%;
-	}
-	.project-section .icon-con .box-1 .icon-h1{
-		padding-bottom:40%;
-	}
+
+	// .project-section .icon-con .box-1 .icon-h1{
+	// 	padding-bottom:40%;
+	// }
 }
 
 @media(max-width:1200px){
